2009-06-03 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks: Update events and unitmasks
	  for the AMD Six-core Opteron processor support from
	  publication 31116 revision 3.28

2009-05-27 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* utils/opcontrol: Fix IBS initialization

2009-05-27 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

 	* daemon/oprofiled.c:
	* daemon/opd_ext.c: Fix extended feature initialization

2009-05-27 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* doc/oprofile.xml:
	* doc/internals.xml: Add Extended-Interface and IBS documentation,
	
2009-05-19 Andi Kleen  <ak@linux.intel.com>

 	* utils/ophelp.c: (cleanup) Fix cleanup crash.
 
2009-05-19  Andi Kleen  <ak@linux.intel.com>

 	* events/i386/atom/events: Use hardcoded counters. Readd
 	UNHALTED_REFERENCE_CLOCK.
 	* events/i386/nehalem/events:
 	* events/i386/nehalem/unit_masks: Use hardcoded counters.
 	Clarify CPU_CLOCKS_UNHALTED.REF_P

2009-05-19 Andi Kleen <ak@linux.intel.com>

 	* libop/op_hw_specific.h: (arch_get_filter):
 	Return -1 when CPUID is not available.

2009-05-18  Brian Bloniarz   <bmb@athenacr.com>

	* libutil/op_file.c: Fix crash when chasing broken symlinks

2009-05-13  Maynard Johnson  <maynardj@us.ibm.com>

	* pp/oparchive.cpp: Fixes for oparchive session-dir as reported in
	  bugs 2646389 and 2646376

2009-05-13  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: Fix for session-dir setup, bug report 2646398

2009-05-13  Brian Bloniarz  <bmb@athenacr.com>

	* utils/opcontrol: Replace bash built-in let with posix statements

2009-05-07  Andi Kleen  <ak@linux.intel.com>
	* utils/ophelp.c:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* libop/op_hw_specific.h: Add workaround_nehalem_aaj79
	* events/Makefile.am:
	* events/i386/atom/events: Add Atom support (New file)
	* events/i386/atom/unit_masks: Add Atom support (New file)