@@ -81,27 +81,27 @@ static char const * const events_ppro_5[] = {
 };
 
 static char const * const events_p4_1[] = {
-	"BRANCH_RETIRED:4096:0:1:1",
-	"MISPRED_BRANCH_RETIRED:4096:0:1:1",
-	"BPU_FETCH_REQUEST:4096:0:1:1",
-	"ITLB_REFERENCE:4096:0:1:1",
-	"MEMORY_CANCEL:4096:0:1:1",
-	"MEMORY_COMPLETE:4096:0:1:1",
-	"TC_MS_XFER:4096:0:1:1",
-	"UOP_QUEUE_WRITES:4096:0:1:1",
+	"BRANCH_RETIRED:4096:1:1:1",
+	"MISPRED_BRANCH_RETIRED:4096:1:1:1",
+	"BPU_FETCH_REQUEST:4096:1:1:1",
+	"ITLB_REFERENCE:4096:1:1:1",
+	"MEMORY_CANCEL:4096:4:1:1",
+	"MEMORY_COMPLETE:4096:1:1:1",
+	"TC_MS_XFER:4096:1:1:1",
+	"UOP_QUEUE_WRITES:4096:1:1:1",
 	NULL
 };
 
 static char const * const events_p4_2[] = {
 	/* fail_to_alloc_counter: 3 event to counter 3, 7 */
-	"BRANCH_RETIRED:4096:0:1:1",
-	"MISPRED_BRANCH_RETIRED:4096:0:1:1",
-	"INSTR_RETIRED:4096:0:1:1",
-	"BPU_FETCH_REQUEST:4096:0:1:1",
-	"ITLB_REFERENCE:4096:0:1:1",
-	"MEMORY_CANCEL:4096:0:1:1",
-	"MEMORY_COMPLETE:4096:0:1:1",
-	"TC_MS_XFER:4096:0:1:1",
+	"BRANCH_RETIRED:4096:1:1:1",
+	"MISPRED_BRANCH_RETIRED:4096:1:1:1",
+	"INSTR_RETIRED:4096:1:1:1",
+	"BPU_FETCH_REQUEST:4096:1:1:1",
+	"ITLB_REFERENCE:4096:1:1:1",
+	"MEMORY_CANCEL:4096:4:1:1",
+	"MEMORY_COMPLETE:4096:1:1:1",
+	"TC_MS_XFER:4096:1:1:1",
 	NULL
 };
 
